correctif bug 'moment'

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 	<div class="center">
 
-	<span id="spanJour">Jour</span>
-	
+		<span id="spanJour">Jour</span>
+
 		<div>
 			<input type="text" id="jour">
 		</div>
@@ -42,18 +42,19 @@
 		<div>
 			<input type="text" id="annee">
 		</div>
+	</div>
 
 		<div>
-		<button id="verifier">Vérifier</button>
+			<button id="verifier">Vérifier</button>
 		</div>
 
 		<div id="overlay">
 			<span id="spanOverlay"></span>
 		</div>
 
-		<script src="node_modules/jquery/dist/jquery.js"></script>
-		<script src="node_modules/moment/moment.js"></script>
-		<script src="node_modules/semantic-ui/dist/semantic.js"></script>
-		<script src="app.js"></script>	
-	</body>
-	</html>
+	<script src="node_modules/jquery/dist/jquery.js"></script>
+	<script src="node_modules/moment/moment.js"></script>
+	<script src="node_modules/semantic-ui/dist/semantic.js"></script>
+	<script src="app.js"></script>	
+</body>
+</html>
